--- a/backend/src/LiveStreamDVR.Api.csproj
+++ b/backend/src/LiveStreamDVR.Api.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0-rc.1.24452.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0-rc.1.24452.1" />
     <PackageReference Include="Scalar.AspNetCore" Version="1.2.9" />
     <PackageReference Include="TwitchLib.EventSub.Webhooks" Version="2.3.0" />
