--- a/backend/src/LiveStreamDVR.Api.csproj
+++ b/backend/src/LiveStreamDVR.Api.csproj
@@ -7,10 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0-rc.1.24452.1" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0-rc.1.24452.1" />
+    <PackageReference Include="LinkDotNet.StringBuilder" Version="1.21.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0-rc.2.24474.3" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0-rc.2.24474.3" />
     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="17.11.20" />
-    <PackageReference Include="Scalar.AspNetCore" Version="1.2.9" />
+    <PackageReference Include="Scalar.AspNetCore" Version="1.2.18" />
     <PackageReference Include="TwitchLib.EventSub.Webhooks" Version="2.3.0" />
   </ItemGroup>
 
