--- a/backend/src/LiveStreamDVR.Api.csproj
+++ b/backend/src/LiveStreamDVR.Api.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="17.11.20" />
     <PackageReference Include="Scalar.AspNetCore" Version="1.2.18" />
     <PackageReference Include="TwitchLib.EventSub.Webhooks" Version="2.3.0" />
+    <PackageReference Include="ZoneTree" Version="1.8.3" />
   </ItemGroup>
 
 </Project>
